<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_weight="0"
        android:gravity="center|start"
        android:text="@string/addNewCardDialogTitle"
        android:textColor="@color/textColor"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nameEditText"
        android:inputType="textCapSentences"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/placeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/placeEditText"
        android:inputType="textCapSentences"
        tools:targetApi="o" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip">

        <EditText
            android:id="@+id/colorEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/colorEditText"
            android:inputType="textPersonName"
            tools:targetApi="o" />

        <ImageButton
            android:id="@+id/colorPickerImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:contentDescription="@string/barCodeImageButtonDescription"
            app:srcCompat="@drawable/ic_color_lens_black_24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip">

        <EditText
            android:id="@+id/barCodeEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/barCodeEditText"
            android:inputType="textPersonName"
            tools:targetApi="o" />

        <ImageButton
            android:id="@+id/barCodePickerImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:contentDescription="@string/barCodeImageButtonDescription"
            app:srcCompat="@drawable/ic_photo_camera_black_24dp" />

    </LinearLayout>

    <Button
        android:id="@+id/dialogConfirmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/dialogConfirmButton"
        android:textColor="@android:color/white" />

</LinearLayout>
