<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/loginImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:layout_weight="1"
            android:contentDescription="@string/loginImageDescription"
            app:srcCompat="@drawable/ic_credit_card_black_24dp"
            tools:srcCompat="@drawable/ic_credit_card_black_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.github.florent37.materialtextfield.MaterialTextField
            android:id="@+id/emailMaterailTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dip"
            app:mtf_image="@drawable/ic_email_black_24dp"
            app:mtf_labelColor="@color/textColor">

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/emailTextFieldText"
                android:inputType="textEmailAddress"
                android:textColor="@color/textColor"
                android:textColorLink="@color/textColor"
                android:textSize="15sp"
                tools:targetApi="o" />

        </com.github.florent37.materialtextfield.MaterialTextField>

        <com.github.florent37.materialtextfield.MaterialTextField
            android:id="@+id/passwordMaterailTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dip"
            app:mtf_image="@drawable/ic_lock_black_24dp"
            app:mtf_labelColor="@color/textColor">

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/passwordTextFieldText"
                android:inputType="textPassword"
                android:textColor="@color/textColor"
                android:textColorLink="@color/textColor"
                android:textSize="15sp"
                tools:targetApi="o" />

        </com.github.florent37.materialtextfield.MaterialTextField>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:backgroundTint="@android:color/background_light"
                android:onClick="onLoginButtonClick"
                android:text="@string/loginButtonText" />

        </LinearLayout>

        <TextView
            android:id="@+id/loginForgotPasswordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:onClick="onLoginForgotPasswordTextViewClick"
            android:padding="5dp"
            android:text="@string/loginForgotPasswordTextViewText"
            android:textAlignment="center"
            android:textColor="@color/textColor" />

        <TextView
            android:id="@+id/signUpTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:linksClickable="true"
            android:onClick="onSignUpTextViewClick"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:text="@string/signUpTextViewText"
            android:textAlignment="center"
            android:textColor="@color/textColor" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>